# claudock

./: .gitignore  README.md  pyproject.toml
docs/: README.md  commands.md  filesystem.md  flags.md  images.md  installation.md  networking.md  profiles.md  project-config.md  quickstart.md  troubleshooting.md
src/claudock/: __init__.py  constants.py
src/claudock/config/: __init__.py  cache.py  project_config.py  user_config.py
src/claudock/console/: __init__.py  banner.py  console.py  errors.py  log.py  progress.py  prompt.py  selector.py  status.py  styles.py  tui.py
src/claudock/exceptions/: __init__.py
src/claudock/manager/: controller.py  manager.py
src/claudock/model/: __init__.py  claudock_container.py  container_config.py  profile.py
src/claudock/utils/: claude_sessions.py  docker_client.py  fs.py  image_updates.py
