[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudock"
version = "1.6.1"
description = "Wrapper containerisé sécurisé pour lancer Claude Code dans des containers nommés et persistants"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "helphyy" }]
keywords = ["claude", "claude-code", "docker", "container", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
dependencies = [
    "docker~=7.1",
    "argcomplete~=3.5",
    "rich~=14.0",
    "rich-argparse~=1.6",
    "PyYAML~=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "ruff~=0.8",
    "mypy~=1.13",
    "types-PyYAML",
]

[project.scripts]
claudock = "claudock.manager.controller:main"

[project.urls]
Homepage = "https://github.com/helphyy/claudock"
Issues = "https://github.com/helphyy/claudock/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
